fix back to home

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <ul style="margin-top: 15px;" class="breadcrumb">
                 <li >
-                    <a href="wuriyanto.com">home <span class="divider">/</span></a>
+                    <a href="http://wuriyanto.com">home <span class="divider">/</span></a>
                 </li>
                 <li>
                     opensource <span class="divider">/</span>
