--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
     <head>
         <meta charset="utf-8">
         <title>Wury Love Opensource &copy;</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/assets/favicon/manifest.json">
+        <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap-responsive.min.css" rel="stylesheet">
