--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 </div>
                 <div class="span4 card">
                     <div class="well">
-                        <h2><a href="https://github.com/musobarlab/kafka-cli">Kafka CLI</a></h2>
-                        <p class="description">Kafka CLI client written in Go<br/>
-                            <span class="label label-success">Go</span>
+                        <h2><a href="https://github.com/wuriyanto48/FtpSharp">FtpSharp</a></h2>
+                        <p class="description">An experimental FTP Server written from scratch in C#<br/>
+                            <span class="label label-success">C#</span>
                         <p>
-                            <iframe src="http://ghbtns.com/github-btn.html?user=musobarlab&repo=kafka-cli&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
-                            <iframe src="http://ghbtns.com/github-btn.html?user=musobarlab&repo=kafka-cli&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+                            <iframe src="http://ghbtns.com/github-btn.html?user=wuriyanto48&repo=FtpSharp&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110px" height="20px"></iframe>
+                            <iframe src="http://ghbtns.com/github-btn.html?user=wuriyanto48&repo=FtpSharp&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
                         </p>
                     </div>
                 </div>
